--- a/weatherfinale.ipynb
+++ b/weatherfinale.ipynb
@@ -1,14 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
     "---\n",
     "\n",
-    "<img src=\"logoP1.png\" width=160px align=\"right\"></span>\n",
-    "##### <img src=\"logoMoSEF.jpeg\" width=100px align=\"right\"></span>\n",
+    "<img src=\"pictures\\logoP1.png\" width=160px align=\"right\"></span>\n",
+    "##### <img src=\"pictures\\logoMoSEF.jpeg\" width=100px align=\"right\"></span>\n",
     "\n",
     "# <span style=\"background-color: \"> **_PROJET PYTHON AVANCE_** </span>\n",
     "\n",
@@ -52,55 +53,6 @@
     "\n",
     "chrome_options = Options()\n",
     "chrome_options.add_argument(\"--headless\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install findspark"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pyspark\n",
-    "import findspark\n",
-    "findspark.init()\n",
-    "\n",
-    "import pyspark\n",
-    "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.master(\"local[1]\").appName(\"SparkByExamples.com\").getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install selenium"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install httpx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install requests-html"
    ]
   },
   {
@@ -755,27 +707,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'spark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [202], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_scrap \u001b[39m=\u001b[39m spark\u001b[39m.\u001b[39mcreateDataFrame(df_scrap)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'spark' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_scrap = spark.createDataFrame(df_scrap)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -787,82 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Feature engeneering Pyspark**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import col\n",
-    "\n",
-    "df_scrap = df_scrap.withColumn(\"Temp_avg\", col(\"Temp_avg\").cast(\"float\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_scrap = df_scrap.sort(\"Date\")\n",
-    "\n",
-    "from pyspark.sql.functions import percent_rank\n",
-    "from pyspark.sql import Window\n",
-    "\n",
-    "df_scrap = df_scrap.withColumn(\"rank\", percent_rank().over(Window.partitionBy().orderBy(\"Date\")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "897"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df = df_scrap.where(\"rank <= .8\").drop(\"rank\")\n",
-    "train_df.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "224"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df = df_scrap.where(\"rank > .8\").drop(\"rank\")\n",
-    "test_df.count()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Feature engeneering Pandas**"
+    "**Feature engineering Pandas**"
    ]
   },
   {
@@ -889,28 +745,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# XGB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = train_df.withColumnRenamed(\"Date\", \"index1\").drop(\"Date\")\n",
-    "train_df = train_df.selectExpr(\"*\", \"index1 as index\").drop(\"index1\")\n",
-    "\n",
-    "test_df = test_df.withColumnRenamed(\"Date\", \"index1\").drop(\"Date\")\n",
-    "test_df = test_df.selectExpr(\"*\", \"index1 as index\").drop(\"index1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 347,
    "metadata": {},
    "outputs": [],
@@ -920,71 +754,6 @@
     "\n",
     "# Affectation de la colonne 'Date' comme index pour le dataframe test\n",
     "test.index = test['Date']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from matplotlib.pyplot import figure"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pyspark"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [206], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m figure(figsize\u001b[39m=\u001b[39m(\u001b[39m15\u001b[39m,\u001b[39m6\u001b[39m),dpi\u001b[39m=\u001b[39m\u001b[39m80\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m train_rdd \u001b[39m=\u001b[39m train_df\u001b[39m.\u001b[39mselect(\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mTemp_avg\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mrdd\u001b[39m.\u001b[39mmap(\u001b[39mlambda\u001b[39;00m row: (row[\u001b[39m0\u001b[39m], row[\u001b[39m1\u001b[39m]))\n\u001b[0;32m      4\u001b[0m test_rdd \u001b[39m=\u001b[39m test_df\u001b[39m.\u001b[39mselect(\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mTemp_avg\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mrdd\u001b[39m.\u001b[39mmap(\u001b[39mlambda\u001b[39;00m row: (row[\u001b[39m0\u001b[39m], row[\u001b[39m1\u001b[39m]))\n\u001b[0;32m      6\u001b[0m \u001b[39m# Convertir l'RDD en un tableau numpy\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_df' is not defined"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "figure(figsize=(15,6),dpi=80)\n",
-    "\n",
-    "train_rdd = train_df.select(\"index\", \"Temp_avg\").rdd.map(lambda row: (row[0], row[1]))\n",
-    "test_rdd = test_df.select(\"index\", \"Temp_avg\").rdd.map(lambda row: (row[0], row[1]))\n",
-    "\n",
-    "# Convertir l'RDD en un tableau numpy\n",
-    "train_arr = np.array(train_rdd.collect())\n",
-    "test_arr = np.array(test_rdd.collect())\n",
-    "\n",
-    "# Tracer le graphique\n",
-    "plt.plot(train_arr[:,0], train_arr[:,1], label='Training Set')#, title='Data Train/Test Split')\n",
-    "plt.plot(test_arr[:,0], test_arr[:,1], label='Test Set')#, title='Data Train/Test Split')\n",
-    "\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Temp_avg')\n",
-    "plt.legend()\n",
-    "plt.show()"
    ]
   },
   {
@@ -1010,74 +779,6 @@
     "ax.axvline('2022-06-18', color='black', ls='--')\n",
     "ax.legend(['Training Set', 'Test Set'])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pyspark"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import dayofweek, quarter, month, year, dayofyear, dayofmonth, weekofyear\n",
-    "\n",
-    "def create_features(df):\n",
-    "    \"\"\"\n",
-    "    Create time series features based on time series index.\n",
-    "    \"\"\"\n",
-    "    df2 = df.withColumn(\"dayofweek\", dayofweek(df.index)) \\\n",
-    "            .withColumn(\"quarter\", quarter(df.index)) \\\n",
-    "            .withColumn(\"month\", month(df.index)) \\\n",
-    "            .withColumn(\"year\", year(df.index)) \\\n",
-    "            .withColumn(\"dayofyear\", dayofyear(df.index)) \\\n",
-    "            .withColumn(\"dayofmonth\", dayofmonth(df.index)) \\\n",
-    "            .withColumn(\"weekofyear\", weekofyear(df.index))\n",
-    "    return df2\n",
-    "\n",
-    "\n",
-    "train_df = create_features(train_df)\n",
-    "test_df = create_features(test_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "train_spark = spark.createDataFrame(train)\n",
-    "test_spark = spark.createDataFrame(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import *\n",
-    "\n",
-    "FEATURES = ['dayofyear', 'dayofweek', 'quarter', 'month', 'year']\n",
-    "TARGET = 'Temp_avg'\n",
-    "\n",
-    "X_train = train_df.select(*FEATURES)\n",
-    "y_train = train_df.select(TARGET)\n",
-    "\n",
-    "X_test = test_df.select(*FEATURES)\n",
-    "y_test = test_df.select(TARGET)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Pandas**"
    ]
   },
   {
@@ -1288,16 +989,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import mean_absolute_error\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 366,
    "metadata": {},
    "outputs": [
@@ -1396,6 +1087,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code à lancer si on veut exporter une base en format csv**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 198,
    "metadata": {},
@@ -1463,12 +1162,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "72cf5a866f527b0ac6efcb258af9dfe5e6ad330fc9b445c1aa01342920e922b6"
+    "hash": "5df45a48bb60f980018e4fe277cf2208a8a7ce1cbaa2620bda48732921a81a3c"
    }
   }
  },
